# sman

./: .dockerignore  .env.example  .gitignore  ALL_IN_ONE.md  API-QUICK-REF.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  JVectorExample.kt  LICENSE  MIGRATION_TO_SMAN_PLAN.md  README.md  README.zh-CN.md  SECURITY.md  SOUL.md  build-mac.sh  build-win.sh  build.gradle.kts  deploy-h5.sh  dev.sh  docker-compose.yml  dream_design.md  electron.vite.config.ts  gradle.properties  h2-common.sh  h2-console.sh  h2-list.sh  h2-queries.sql  h2-shell.sh  hub.key  index.html  nginx.conf  package-backend-linux.sh  package-lock.json  package-win.sh  package.json  package.sh  pnpm-lock.yaml  (+18 more)
.claude/: .scanning  knowledge-manifest.json  settings.json
.sman/: INIT.md  scan-plan.json
.smanlocal/: settings.json
agent/: .gitignore  DETAIL_FIRST_OPTIMIZATION.md  README.md  TEST-GUIDE.md  build.gradle  bzip-java.sh  bzip.sh  gradle.properties  package-agent.sh  settings.gradle  start.sh  stop.sh  test-tools.sh  test_websocket.py
bazaar/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: 2026-04-22-stardom-chemistry-analysis.md  2026-04-22-stardom-intelligent-collaboration-design.md  2026-04-22-stardom-status.md  2026-04-27-build-system-playbook.md  2026-04-27-security-fix.md  2026-04-27-stardom-evaluation.md  2026-05-02-tauri-rust-migration-analysis.md  2026-05-02-warp-ui-analysis-and-sman-optimization.md  429_ERROR_FIX.md  API_KEY_SETUP.md  API_TEST_RESULTS.md  ARCHITECTURE.md  AUTOLOOP_ANALYSIS_COMPLETE.md  AUTOLOOP_ANALYSIS_VERIFICATION_GUIDE.md  CODE_SIMPLIFICATION_REPORT.md  CODE_SIMPLIFICATION_REPORT_BgeM3Client.md  CODE_SIMPLIFICATION_REPORT_SCANNERS.md  CODE_SIMPLIFICATION_REPORT_VERIFICATION.md  CODE_SIMPLIFICATION_SUMMARY.md  COMPARISON-Evolution-vs-Direct.md  COMPARISON-RESULTS.md  CONCURRENT_RETRY_ENHANCEMENT.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  CONFIG_GUIDE.md  Claude_Code_Integration_Solutions.md  DESIGN-User-Preference-Learning.md  EMPTY_DATA_ANALYSIS_REPORT.md  EVAL-Evolution-Loop.md  FINAL_FIX.md  FIX_SUMMARY.md  HTTP_API_FINAL_REPORT.md  HTTP_API_TEST_FINAL.md  HTTP_API_TEST_REPORT.md  HTTP_TEST_RESULTS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_REQUIREMENTS.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUCCESS_REPORT.md  JAVA_SUPPORT_FIX.md  (+66 more)
smanclaw-desktop/: AGENTS.md.example  CLAUDE.md  Cargo.toml  SOUL.md  USER.md  WINDOWS-BUILD-GUIDE.md  restart-desktop.sh
smanclaw-desktop/crates/smanclaw-core/: Cargo.toml
smanclaw-desktop/crates/smanclaw-core/src/: acceptance_evaluator.rs  agents_generator.rs  config.rs  error.rs  experience_sink.rs  history_store.rs  identity.rs  lib.rs  llm_client.rs  main_task.rs  orchestrator.rs  project_explorer.rs  project_manager.rs  runtime.rs  settings_store.rs  skill_store.rs  sub_claw_executor.rs  task_generator.rs  task_manager.rs  task_poller.rs  user_experience.rs
smanclaw-desktop/crates/smanclaw-desktop/: Cargo.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test_integration.ts  tsconfig.json  vite.config.ts  vitest.config.ts
smanclaw-desktop/crates/smanclaw-desktop/src/: app.css  lib.rs
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/.smanclaw-desktop/: .llm_key  settings.json
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/capabilities/: default.json
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/icons/: icon.icns
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  setup.rs  state.rs
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/src/commands/: chat_execution.rs  conversation_commands.rs  history_runtime.rs  orchestration_decompose.rs  project_commands.rs  settings_commands.rs  task_commands.rs  utility_commands.rs
smanclaw-desktop/crates/smanclaw-desktop/src-tauri/src/orchestration/: api.rs  mod.rs  remediation.rs  runtime.rs  status.rs  task_outcome.rs
smanclaw-desktop/crates/smanclaw-desktop/src/components/chat/: ChatWindow.svelte  CodeBlock.svelte  InputArea.svelte  MermaidRenderer.svelte  MessageBubble.svelte  SkillPicker.svelte
smanclaw-desktop/crates/smanclaw-desktop/src/components/layout/: Header.svelte  MainLayout.svelte  Sidebar.svelte
smanclaw-desktop/crates/smanclaw-desktop/src/components/project/: ProjectCard.svelte  ProjectList.svelte
smanclaw-desktop/crates/smanclaw-desktop/src/components/task/: FileTree.svelte  SubTaskProgress.svelte  TaskProgress.svelte
smanclaw-desktop/crates/smanclaw-desktop/src/lib/__tests__/: assistantContent.test.ts  messageUpdate.test.ts  tasksStoreEvents.test.ts
smanclaw-desktop/crates/smanclaw-desktop/src/lib/api/: tauri.ts
smanclaw-desktop/crates/smanclaw-desktop/src/lib/chat/: assistantContent.ts
smanclaw-desktop/crates/smanclaw-desktop/src/lib/stores/: projects.ts  settings.ts  tasks.ts
smanclaw-desktop/crates/smanclaw-desktop/src/lib/types/: index.ts
smanclaw-desktop/crates/smanclaw-desktop/src/routes/: +layout.svelte  +page.svelte
smanclaw-desktop/crates/smanclaw-desktop/src/routes/settings/: +page.svelte
smanclaw-desktop/crates/smanclaw-ffi/: Cargo.toml
smanclaw-desktop/crates/smanclaw-ffi/src/: claude_code_step_executor.rs  lib.rs  orchestration_bridge.rs  progress_stream.rs  step_executor_factory.rs  task_executor.rs  zeroclaw_bridge.rs  zeroclaw_step_executor.rs
smanclaw-desktop/crates/smanclaw-types/: Cargo.toml
smanclaw-desktop/crates/smanclaw-types/src/: events.rs  history.rs  knowledge.rs  lib.rs  project.rs  settings.rs  task.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
src-tauri/src-tauri/capabilities/: default.json
src-tauri/src/commands/: conversation.rs  fs.rs  history_runtime.rs  mod.rs  orchestration_decompose.rs  project.rs  settings.rs  settings_commands.rs  shell.rs  sidecar.rs
src-tauri/src/orchestration/: api.rs  mod.rs  remediation.rs  runtime.rs
(+1896 files in other folders)
