[package]
name = "sman"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Sman Team"]
license = "MIT"
repository = "https://github.com/sman/sman"
description = "Sman Desktop Tauri Backend"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
glob = "0.3"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
name = "sman"
crate-type = ["lib", "cdylib", "staticlib"]
