[package]
name = "smanclaw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core business logic for SmanClaw Desktop App"

[dependencies]
smanclaw-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util"] }
