[package]
name = "smanclaw-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "FFI bridge to ZeroClaw for SmanClaw Desktop App"

[dependencies]
smanclaw-types = { workspace = true }
smanclaw-core = { workspace = true }
zeroclaw = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util"] }
